--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "formik": "^2.1.4",
+    "history": "^4.10.1",
     "preact": "^10.1.0",
     "preact-render-to-string": "^5.1.2",
+    "preact-router": "^3.2.1",
     "react-bootstrap": "^1.0.1"
   }
 }
