--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
   "private": true,
   "name": "opendnd-frontend",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "license": "MIT",
   "scripts": {
     "build": "preact build",
     "serve": "sirv build --cors --single",
-    "dev": "preact watch",
-    "lint": "eslint src"
+    "dev": "preact watch"
   },
-  "eslintConfig": {
-    "extends": "eslint-config-synacor"
-  },
-  "eslintIgnore": [
-    "build/*"
-  ],
   "devDependencies": {
-    "eslint": "^6.0.1",
-    "eslint-config-synacor": "^3.0.4",
     "preact-cli": "^3.0.0-rc.6",
     "sirv-cli": "^0.4.5"
   },
